@@ -1,5 +1,9 @@
 2004-11-14  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* fix stupid segfault on exit
+
+2004-11-14  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Fixed bug with segfault when trying to connect with an empty server list.
 
 2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>
